# ConsoleAI

./: .gitignore  pyproject.toml
src/cAI/: ask.py
src/gemCLI/: gemcli.py
