[project]
name = "cAI"
version = "0.1.0"
description = "Gemini AI for your terminal"
readme = "README.md"
dependencies = [
    "google-genai",
    "python-dotenv",
]

[project.scripts]
ask = "cAI.ask:ask"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cAI"]
